salesforce/force-app/main/default/objects/Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>