salesforce/force-app/main/default/objects/Notification__c/fields/Read_Status__c.field-meta.xml
<CustomField>
    <fullName>Read_Status__c</fullName>
    <label>Read Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>